# gbdc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_test.yml  build_wheels.yml  build_wheels_prev.yml
doc/extractors/: CNFGateFeatures.md
src/: Main.cc  gbdlib.cc  gbdlib.h
src/extract/: CMakeLists.txt  CNFBaseFeatures.cc  CNFBaseFeatures.h  CNFGateFeatures.cc  CNFGateFeatures.h  CNFSaniCheck.cc  CNFSaniCheck.h  IExtractor.h  OPBBaseFeatures.cc  OPBBaseFeatures.h  Util.h  WCNFBaseFeatures.cc  WCNFBaseFeatures.h
src/extract/gates/: BlockList.h  GateAnalyzer.h  GateFormula.h  OccurrenceList.h
src/identify/: GBDHash.h  ISOHash.h  ISOHash2.h  ISOHash2Output.cpp
src/test/: CMakeLists.txt  Util.h  tests_gbdlib.cc  tests_streamcompressor.cc  tests_threadpool.cc
src/transform/: CMakeLists.txt  cnf2bip.cc  cnf2bip.h  cnf2cnf.cc  cnf2cnf.h  cnf2kis.h
src/util/: CNFFormula.h  CSRCNFFormula.h  CaptureDistribution.cc  CaptureDistribution.h  OutputWrapper.h  ResourceLimits.h  SolverTypes.h  Stamp.h  StreamBuffer.h  StreamCompressor.h
src/util/threadpool/: TrackingAllocator.h
test/: CMakeLists.txt  tests_feature_extraction.cc  tests_gbdlib.cc  tests_isohash2.cc  tests_streambuffer.cc
test/resources/scrambled/: p_noindividualflips.cnf
test/resources/scrambled/halfflips/: R_half_flips.cnf
test/resources/scrambled/indepth/00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf/: 00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f08.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f17.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f24.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f27.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f33.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f34.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f35.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f64.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f67.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_P_f85.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f05.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f10.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f23.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f44.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f63.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f80.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f82.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_p_R_f94.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f13.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f18.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f20.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f27.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f29.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f33.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f62.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_P_f94.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f01.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f05.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f23.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f47.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f53.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f57.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f58.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f63.cnf.xz  00d5a43a481477fa4d56a2ce152a6cfb-st_890_86_9_572.normalised.cnf_scrambled_r_R_f94.cnf.xz
test/resources/scrambled/indepth/d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf/: d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f13.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f19.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f24.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f31.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f35.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f42.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f45.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f64.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f74.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_P_f97.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_R_f07.cnf.xz  d0298807e51730261ef65db827dcd70f-Break_triple_16_70.xml.cnf_scrambled_p_R_f22.cnf.xz  (+26 more)
test/resources/scrambled/simple/: P_noindividualflips.cnf  R_noindividualflips.cnf  clique_notchanged.cnf  pP_noindividualflips.cnf  rR_noindividualflips.cnf  r_noindividualflips.cnf
(+46 files in other folders)
